Fixed the alignment problem.

--- a/static/blog/main.css
+++ b/static/blog/main.css
@@ -6,6 +6,10 @@
     padding-bottom: 0px;
 }
 
+h1,
+h3 {
+  text-align: center;
+}
 
 h2 {
     color: #FF0000;
